# tradersuko

./: .gitignore  README.md  index.html  package-lock.json  package.json
backend/: .env.example  hermes_api.py  hermes_brain.py  hermes_executor.py  hermes_ingest.py  requirements.txt
backend/core/: pyproject.toml
backend/core/tradersuko_core/: __init__.py  analisis.py  db.py  modelos.py  senales.py
backend/scripts/: hermes_trading_api.service  hermes_trading_brain.service  hermes_trading_ingest.service  notify_5trades.sh  tradersuko_binance_real.service  tradersuko_binance_testnet.service  tradersuko_mexc_sol.service  watchdog_tradersuko.sh
src/: App.css  index.css  types.ts
src/components/: AlertsLog.tsx  ConfigCard.tsx  ConfirmationRadar.tsx  CvdChart.tsx  Dashboard.tsx  ExecutorStatusWidget.tsx  KPICard.tsx  LiquidationsChart.tsx  MarketClocks.tsx  OrderBookDepthWidget.tsx  PositionManagementPanel.tsx  RMultiplesHistory.tsx  TradesChart.tsx  TradingPanel.tsx
src/services/: api.ts
