[project]
name = "tradersuko-core"
version = "0.1.0"
description = "Core de trading algorítmico cuantitativo — TraderSuko"
requires-python = ">=3.11"
dependencies = [
    "ccxt>=4.0",
    "psycopg2-binary>=2.9",
    "python-dotenv>=1.0",
    "fastapi>=0.100",
    "uvicorn>=0.20",
    "pydantic>=2.0",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["tradersuko_core*"]
